cmake_minimum_required(VERSION 3.31)
project(Elemental)

set(CMAKE_CXX_STANDARD 14)

add_executable(Elemental
        Concurso_Modulo_1/ProblemA.cpp
        Concurso_Modulo_1/problema_letras.cpp
        Concurso_Modulo_1/ProblemaB.cpp
        Concurso_Modulo_1/ProblemaC.cpp
        Concurso_Modulo_1/ProblemaD.cpp
        Concurso_Modulo_1/ProblemaMatriz.cpp
        Concurso_Modulo_1/Tarea_clase_5.cpp
        Concuso_modulo_2/A.cpp
        Concuso_modulo_2/B.cpp
        EstrutucrasDeDatos/map.cpp
        EstrutucrasDeDatos/multimap.cpp
        EstrutucrasDeDatos/multiset.cpp
        EstrutucrasDeDatos/pq.cpp
        EstrutucrasDeDatos/set.cpp
        EstrutucrasDeDatos/unordered_set.cpp
        Invest/find.cpp
        Invest/substr.cpp
        clases/clase1_IO.cpp
        clases/clase2.cpp
        clases/Clase5.cpp
        clases/Clase8_copy_code.cpp
        clases/Clase8_funciones.cpp
        clases/Clase8_funtion.cpp
        clases/clase_3.cpp
        clases/Clase_3_for.cpp
        clases/Clase_4.cpp
        clases/Clase_5.cpp
        clases/clase_8.cpp
        clases/clase_string.cpp
        clases/deque.cpp
        clases/fibonacci_recuersivo.cpp
        clases/prueba.cpp
        clases/Pruebha.cpp
        clases/stack.cpp)
